[package]
name = "jkcenum"
version = "0.3.1"
authors = [
    "jankincai <jankincai12@gmail.com>",
]
edition = "2021"
description = "Rust enum library"
repository = "https://github.com/caizhengxin/jkcenum"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "accessibility",
]
keywords = [
    "enum",
    "jkcenum",
    "jenum",
]
license-file = "LICENSE"
include = [
    "src/*",
    "derive/src/*",
    "derive/Cargo.toml",
    "benches/*",
    "examples/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

[workspace]
members = [
    "derive"
]

[features]
default = ["std"]
std = ["jkcenum_derive/std"]
derive = ["jkcenum_derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
overflow-checks = false

[dependencies]
jkcenum_derive = { path = "./derive", version = "0.3.1", default-features = false, optional = true }
thiserror-no-std = "2.0"

[dev-dependencies]
jkcenum_derive = { path = "derive", default-features = false, version = "0.3.1" }
serde = { version = "^1.0", features = ["derive"] }
