[package]
name = "jkcenum_derive"
version = "0.3.1"
authors = [
    "jankincai <jankincai12@gmail.com>",
]
edition = "2021"
description = "Rust enum library"
repository = "https://github.com/caizhengxin/jkcenum"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "accessibility",
]
keywords = [
    "enum",
    "jkcenum",
    "jenum",
]
license-file = "LICENSE"
include = [
    "src/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
virtue = "^0.0"
quote = "1"
